--- a/prak5/index.html
+++ b/prak5/index.html
@@ -21,7 +21,9 @@
     <!-- pemanggilan file CSS -->
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
+    <!-- header -->
     <header class="header">
       <h3>Nikola Arinanda - 121140202</h3>
       <nav>
@@ -31,7 +33,10 @@
         </ul>
       </nav>
     </header>
+
+    <!-- bagian utama (main content) -->
     <section class="main-content">
+      <!-- kelas kalkulator -->
       <div class="kalkulator">
         <div class="hasil">
           <!-- penggunaan id "nilai-hasil" agar dapat dibaca oleh JS, digunakan untuk menampilkan operasi -->
@@ -61,9 +66,12 @@
         <button class="tombol operator" onclick="hasil()">=</button>
       </div>
     </section>
+
+    <!-- footer -->
     <footer class="footer">
       <p>© Nikola Arinanda 2023 - Hak Cipta Tidak Dilindungi Undang-Undang</p>
     </footer>
+
     <!-- pemanggilan file JS -->
     <script src="script.js"></script>
   </body>
